# llm-search

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: entrypoint.sh
scripts/: check_rebuild.sh  configure_gemini_settings.py  integration_test.py  sync_creds.py
src/llm_search/: __init__.py  __main__.py  config.py  logging_setup.py  response.py  server.py
src/llm_search/prompts/: __init__.py  system_prompt.md
src/llm_search/providers/: __init__.py  claude.py  codex.py  gemini.py  kimi.py
